--- a/Spots/Spots/View/Base.lproj/Main.storyboard
+++ b/Spots/Spots/View/Base.lproj/Main.storyboard
@@ -542,7 +542,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="g9c-RQ-H2c">
-                                <rect key="frame" x="45" y="354" width="285" height="42"/>
+                                <rect key="frame" x="45" y="491" width="285" height="42"/>
                                 <color key="backgroundColor" red="0.1450980392" green="0.5450980392" blue="0.56470588239999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -551,8 +551,24 @@
                                     <action selector="confirmPasswords:" destination="ht1-K4-bT7" eventType="touchUpInside" id="bUG-g4-OW5"/>
                                 </connections>
                             </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="3Vt-Mc-JEr">
+                                <rect key="frame" x="45" y="118" width="285" height="91"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Original Password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PCE-6O-oOU">
+                                        <rect key="frame" x="0.0" y="0.0" width="285" height="34"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Pij-mc-IOu">
+                                        <rect key="frame" x="0.0" y="57" width="285" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
+                                    </textField>
+                                </subviews>
+                            </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="snH-2G-VS1">
-                                <rect key="frame" x="45" y="116" width="285" height="91"/>
+                                <rect key="frame" x="45" y="239" width="285" height="91"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="New Password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dUg-g7-A3g">
                                         <rect key="frame" x="0.0" y="0.0" width="285" height="34"/>
@@ -563,12 +579,12 @@
                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="SEF-sX-VHA">
                                         <rect key="frame" x="0.0" y="57" width="285" height="34"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                 </subviews>
                             </stackView>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="23" translatesAutoresizingMaskIntoConstraints="NO" id="RrT-bX-4DH">
-                                <rect key="frame" x="45" y="235" width="285" height="91"/>
+                                <rect key="frame" x="45" y="360" width="285" height="91"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Confirm New Password:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wIO-eV-Jx7">
                                         <rect key="frame" x="0.0" y="0.0" width="285" height="34"/>
@@ -584,7 +600,7 @@
                                 </subviews>
                             </stackView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Inputs must match" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ff2-Ou-7Jh">
-                                <rect key="frame" x="45" y="436" width="285" height="14.333333333333314"/>
+                                <rect key="frame" x="45" y="573" width="285" height="14.333333333333371"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                                 <color key="textColor" red="0.88860103629999998" green="0.23466077839999999" blue="0.27765938010000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -592,26 +608,21 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="snH-2G-VS1" firstAttribute="leading" secondItem="Egw-wd-NXO" secondAttribute="leading" constant="45" id="11M-NF-c2I"/>
-                            <constraint firstItem="g9c-RQ-H2c" firstAttribute="top" secondItem="RrT-bX-4DH" secondAttribute="bottom" constant="28" id="5g6-9X-C1f"/>
-                            <constraint firstItem="RrT-bX-4DH" firstAttribute="top" secondItem="snH-2G-VS1" secondAttribute="bottom" constant="28" id="CQm-yL-gkb"/>
-                            <constraint firstItem="g9c-RQ-H2c" firstAttribute="leading" secondItem="Egw-wd-NXO" secondAttribute="leading" constant="45" id="Esg-xu-s2q"/>
-                            <constraint firstItem="Egw-wd-NXO" firstAttribute="trailing" secondItem="ff2-Ou-7Jh" secondAttribute="trailing" constant="45" id="Evt-HZ-tVX"/>
-                            <constraint firstItem="g9c-RQ-H2c" firstAttribute="leading" secondItem="Egw-wd-NXO" secondAttribute="leading" constant="45" id="GGq-Ir-YQq"/>
-                            <constraint firstItem="ff2-Ou-7Jh" firstAttribute="leading" secondItem="Egw-wd-NXO" secondAttribute="leading" constant="45" id="J4P-UZ-pRA"/>
-                            <constraint firstItem="Egw-wd-NXO" firstAttribute="trailing" secondItem="g9c-RQ-H2c" secondAttribute="trailing" constant="45" id="JRn-7x-rIK"/>
-                            <constraint firstItem="Egw-wd-NXO" firstAttribute="trailing" secondItem="RrT-bX-4DH" secondAttribute="trailing" constant="45" id="Jhd-Hk-utj"/>
-                            <constraint firstItem="ff2-Ou-7Jh" firstAttribute="top" secondItem="g9c-RQ-H2c" secondAttribute="bottom" constant="40" id="KZB-db-9yW"/>
-                            <constraint firstItem="Egw-wd-NXO" firstAttribute="trailing" secondItem="ff2-Ou-7Jh" secondAttribute="trailing" constant="45" id="LFq-SO-e4b"/>
-                            <constraint firstItem="Egw-wd-NXO" firstAttribute="trailing" secondItem="snH-2G-VS1" secondAttribute="trailing" constant="45" id="QGs-Cn-lCm"/>
-                            <constraint firstItem="snH-2G-VS1" firstAttribute="top" secondItem="Egw-wd-NXO" secondAttribute="top" constant="28" id="WOa-6Q-sqR"/>
-                            <constraint firstItem="RrT-bX-4DH" firstAttribute="top" secondItem="snH-2G-VS1" secondAttribute="bottom" constant="28" id="c4s-Fd-ksH"/>
-                            <constraint firstItem="Egw-wd-NXO" firstAttribute="trailing" secondItem="g9c-RQ-H2c" secondAttribute="trailing" constant="45" id="ete-np-AIr"/>
-                            <constraint firstItem="Egw-wd-NXO" firstAttribute="trailing" secondItem="snH-2G-VS1" secondAttribute="trailing" constant="45" id="hYm-nl-B9l"/>
-                            <constraint firstItem="Egw-wd-NXO" firstAttribute="trailing" secondItem="snH-2G-VS1" secondAttribute="trailing" constant="45" id="xjZ-my-A7K"/>
-                            <constraint firstItem="ff2-Ou-7Jh" firstAttribute="leading" secondItem="Egw-wd-NXO" secondAttribute="leading" constant="45" id="yMX-no-ykI"/>
-                            <constraint firstItem="snH-2G-VS1" firstAttribute="leading" secondItem="Egw-wd-NXO" secondAttribute="leading" constant="45" id="z37-uX-orN"/>
-                            <constraint firstItem="RrT-bX-4DH" firstAttribute="leading" secondItem="Egw-wd-NXO" secondAttribute="leading" constant="45" id="zdW-dk-Vl8"/>
+                            <constraint firstItem="snH-2G-VS1" firstAttribute="leading" secondItem="Egw-wd-NXO" secondAttribute="leading" constant="45" id="4Z1-Hf-7av"/>
+                            <constraint firstItem="3Vt-Mc-JEr" firstAttribute="leading" secondItem="Egw-wd-NXO" secondAttribute="leading" constant="45" id="823-Yo-cl6"/>
+                            <constraint firstItem="Egw-wd-NXO" firstAttribute="trailing" secondItem="snH-2G-VS1" secondAttribute="trailing" constant="45" id="GFB-81-2xA"/>
+                            <constraint firstItem="g9c-RQ-H2c" firstAttribute="top" secondItem="RrT-bX-4DH" secondAttribute="bottom" constant="40" id="HpF-pU-IXh"/>
+                            <constraint firstItem="g9c-RQ-H2c" firstAttribute="leading" secondItem="Egw-wd-NXO" secondAttribute="leading" constant="45" id="I6f-2p-71j"/>
+                            <constraint firstItem="RrT-bX-4DH" firstAttribute="top" secondItem="snH-2G-VS1" secondAttribute="bottom" constant="30" id="JlM-F8-xix"/>
+                            <constraint firstItem="Egw-wd-NXO" firstAttribute="trailing" secondItem="3Vt-Mc-JEr" secondAttribute="trailing" constant="45" id="Loa-am-ogE"/>
+                            <constraint firstItem="ff2-Ou-7Jh" firstAttribute="top" secondItem="g9c-RQ-H2c" secondAttribute="bottom" constant="40" id="MxV-Bk-KNs"/>
+                            <constraint firstItem="snH-2G-VS1" firstAttribute="top" secondItem="3Vt-Mc-JEr" secondAttribute="bottom" constant="30" id="N1Q-eR-qEz"/>
+                            <constraint firstItem="Egw-wd-NXO" firstAttribute="trailing" secondItem="RrT-bX-4DH" secondAttribute="trailing" constant="45" id="N4e-qa-LHc"/>
+                            <constraint firstItem="3Vt-Mc-JEr" firstAttribute="top" secondItem="Egw-wd-NXO" secondAttribute="top" constant="30" id="ZHz-rB-TbK"/>
+                            <constraint firstItem="Egw-wd-NXO" firstAttribute="trailing" secondItem="g9c-RQ-H2c" secondAttribute="trailing" constant="45" id="cUg-iJ-vNG"/>
+                            <constraint firstItem="Egw-wd-NXO" firstAttribute="trailing" secondItem="ff2-Ou-7Jh" secondAttribute="trailing" constant="45" id="d23-s0-2w1"/>
+                            <constraint firstItem="RrT-bX-4DH" firstAttribute="leading" secondItem="Egw-wd-NXO" secondAttribute="leading" constant="45" id="oLH-Ey-voy"/>
+                            <constraint firstItem="ff2-Ou-7Jh" firstAttribute="leading" secondItem="Egw-wd-NXO" secondAttribute="leading" constant="45" id="rau-gR-wPh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="Egw-wd-NXO"/>
                     </view>
@@ -622,6 +633,8 @@
                         <outlet property="errorLabel" destination="ff2-Ou-7Jh" id="bgD-V6-8pZ"/>
                         <outlet property="newPass" destination="SEF-sX-VHA" id="Nb4-jS-6TH"/>
                         <outlet property="newPasswordLabel" destination="dUg-g7-A3g" id="f8q-g3-bj3"/>
+                        <outlet property="originalPass" destination="Pij-mc-IOu" id="mQ7-Db-VCu"/>
+                        <outlet property="originalPasswordLabel" destination="PCE-6O-oOU" id="S9g-b2-kUu"/>
                         <outlet property="saveButton" destination="g9c-RQ-H2c" id="Byw-21-vLo"/>
                     </connections>
                 </viewController>
