--- a/Spots/Spots/View/Base.lproj/Main.storyboard
+++ b/Spots/Spots/View/Base.lproj/Main.storyboard
@@ -911,22 +911,37 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iJo-Wp-60O" customClass="ColorButton" customModule="Spots" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="29.666666666666668" height="30"/>
                                         <color key="backgroundColor" red="0.89019607840000003" green="0.23466077839999999" blue="0.27765938010000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <action selector="selectPink:" destination="d0U-hz-kAF" eventType="touchUpInside" id="xo4-CU-tLT"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KfW-m0-ii1" customClass="ColorButton" customModule="Spots" customModuleProvider="target">
                                         <rect key="frame" x="63.666666666666671" y="0.0" width="30" height="30"/>
                                         <color key="backgroundColor" red="0.1450980392" green="0.5450980392" blue="0.56470588239999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <connections>
+                                            <action selector="selectRed:" destination="d0U-hz-kAF" eventType="touchUpInside" id="4qI-DB-Gx1"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C5Z-Z9-Lm4" customClass="ColorButton" customModule="Spots" customModuleProvider="target">
                                         <rect key="frame" x="127.66666666666667" y="0.0" width="29.666666666666671" height="30"/>
                                         <color key="backgroundColor" red="0.68235294120000001" green="0.81176470590000005" blue="0.73725490199999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <connections>
+                                            <action selector="selectOrange:" destination="d0U-hz-kAF" eventType="touchUpInside" id="b4D-3d-qlD"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aOe-RB-Pg2" customClass="ColorButton" customModule="Spots" customModuleProvider="target">
                                         <rect key="frame" x="191.33333333333334" y="0.0" width="30" height="30"/>
                                         <color key="backgroundColor" red="0.91764705879999997" green="0.8862745098" blue="0.7725490196" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <connections>
+                                            <action selector="selectGold:" destination="d0U-hz-kAF" eventType="touchUpInside" id="a0G-WJ-tTp"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2ce-b8-FpE" customClass="ColorButton" customModule="Spots" customModuleProvider="target">
                                         <rect key="frame" x="255.33333333333329" y="0.0" width="29.666666666666657" height="30"/>
                                         <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <action selector="selectPeach:" destination="d0U-hz-kAF" eventType="touchUpInside" id="S23-v5-8sj"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -936,22 +951,37 @@
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CkQ-pG-dnb" customClass="ColorButton" customModule="Spots" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="29.666666666666668" height="30"/>
                                         <color key="backgroundColor" red="0.89019607840000003" green="0.23466077839999999" blue="0.27765938010000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <action selector="selectBlue:" destination="d0U-hz-kAF" eventType="touchUpInside" id="eeL-CS-wIp"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UHY-4H-EQf" customClass="ColorButton" customModule="Spots" customModuleProvider="target">
                                         <rect key="frame" x="63.666666666666671" y="0.0" width="30" height="30"/>
                                         <color key="backgroundColor" red="0.1450980392" green="0.5450980392" blue="0.56470588239999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <connections>
+                                            <action selector="selectCyan:" destination="d0U-hz-kAF" eventType="touchUpInside" id="L87-yj-ZaF"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="r9G-QC-VbY" customClass="ColorButton" customModule="Spots" customModuleProvider="target">
                                         <rect key="frame" x="127.66666666666667" y="0.0" width="29.666666666666671" height="30"/>
                                         <color key="backgroundColor" red="0.68235294120000001" green="0.81176470590000005" blue="0.73725490199999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <connections>
+                                            <action selector="selectGreen:" destination="d0U-hz-kAF" eventType="touchUpInside" id="3wI-PS-ZeC"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xo5-EI-QqT" customClass="ColorButton" customModule="Spots" customModuleProvider="target">
                                         <rect key="frame" x="191.33333333333334" y="0.0" width="30" height="30"/>
                                         <color key="backgroundColor" red="0.91764705879999997" green="0.8862745098" blue="0.7725490196" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <connections>
+                                            <action selector="selectBrown:" destination="d0U-hz-kAF" eventType="touchUpInside" id="o7U-jS-obD"/>
+                                        </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JRd-mr-cW1" customClass="ColorButton" customModule="Spots" customModuleProvider="target">
                                         <rect key="frame" x="255.33333333333329" y="0.0" width="29.666666666666657" height="30"/>
                                         <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <action selector="selectBlack:" destination="d0U-hz-kAF" eventType="touchUpInside" id="HhZ-bS-i0L"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -986,6 +1016,17 @@
                                     </button>
                                 </subviews>
                             </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NZH-l3-whI">
+                                <rect key="frame" x="38" y="432" width="91" height="42"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" red="0.1450980392" green="0.5450980392" blue="0.56470588239999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <state key="normal" title="No color"/>
+                                <connections>
+                                    <action selector="confirmPasswords:" destination="ht1-K4-bT7" eventType="touchUpInside" id="9FS-4T-Ps5"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
@@ -1016,6 +1057,18 @@
                         <viewLayoutGuide key="safeArea" id="Ugo-0P-Xhe"/>
                     </view>
                     <navigationItem key="navigationItem" id="MEf-eq-GZ7"/>
+                    <connections>
+                        <outletCollection property="colorButtonCollection" destination="iJo-Wp-60O" collectionClass="NSMutableArray" id="9lu-QF-a0X"/>
+                        <outletCollection property="colorButtonCollection" destination="KfW-m0-ii1" collectionClass="NSMutableArray" id="QWh-jy-QiM"/>
+                        <outletCollection property="colorButtonCollection" destination="C5Z-Z9-Lm4" collectionClass="NSMutableArray" id="eMj-T3-Kj7"/>
+                        <outletCollection property="colorButtonCollection" destination="aOe-RB-Pg2" collectionClass="NSMutableArray" id="nza-MF-HuR"/>
+                        <outletCollection property="colorButtonCollection" destination="2ce-b8-FpE" collectionClass="NSMutableArray" id="53E-a8-alP"/>
+                        <outletCollection property="colorButtonCollection" destination="CkQ-pG-dnb" collectionClass="NSMutableArray" id="pWX-Vl-n83"/>
+                        <outletCollection property="colorButtonCollection" destination="UHY-4H-EQf" collectionClass="NSMutableArray" id="0eo-lO-9J7"/>
+                        <outletCollection property="colorButtonCollection" destination="r9G-QC-VbY" collectionClass="NSMutableArray" id="cSM-vh-7uf"/>
+                        <outletCollection property="colorButtonCollection" destination="xo5-EI-QqT" collectionClass="NSMutableArray" id="77u-3f-235"/>
+                        <outletCollection property="colorButtonCollection" destination="JRd-mr-cW1" collectionClass="NSMutableArray" id="xvg-l8-JSK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3Zv-wJ-jSU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
